k8s/main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kaft
spec:
  ingressClassName: haproxy
  rules:
    - host: kaft.kigawa.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kaft
                port:
                  number: 8080
